--- a/example/sp1-zklogin-extension/lib/Cargo.toml
+++ b/example/sp1-zklogin-extension/lib/Cargo.toml
@@ -7,3 +7,5 @@ publish = false
 [dependencies]
 serde = { workspace = true }
 anyhow = { workspace = true }
+serde_json = "1.0.138"
+base64 = "0.22.1"
