--- a/example/sp1-zklogin-extension/program/Cargo.toml
+++ b/example/sp1-zklogin-extension/program/Cargo.toml
@@ -6,5 +6,6 @@ publish = false
 
 [dependencies]
 sp1-zkvm = { workspace = true }
-jwt-rustcrypto = { workspace = true }
 lib = { path = "../lib", package = "json-lib" }
+rsa = "0.9.6" 
+sha2 = {version =  "0.10.8",package = "sha2", features = ["oid"]}
