--- a/example/sp1-zklogin-extension/Cargo.toml
+++ b/example/sp1-zklogin-extension/Cargo.toml
@@ -18,13 +18,6 @@ tracing = "0.1.40"
 base64 = "0.13"
 anyhow = "1.0"
 
-# fork that removes time validation of expiry that causes issues with SP1 because of its C dependency
-#jwt-rustcrypto = { git = "https://github.com/gnosed/jwt-rustcrypto.git" }
-# [patch.crates-io]
-# sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
-
-[patch.crates-io]
-# sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
-# #sha2 = {version =  "0.10.8",package = "sha2", features = ["oid"]}                                   # Check for the latest version
+[patch.crates-io]                                   # Check for the latest version
 rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA/", tag = "patch-0.9.6-sp1-4.0.0" }
 sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0", features = ["oid"] }
