--- a/example/sp1-zklogin-extension/program/Cargo.toml
+++ b/example/sp1-zklogin-extension/program/Cargo.toml
@@ -9,3 +9,4 @@ sp1-zkvm = { workspace = true }
 lib = { path = "../lib", package = "json-lib" }
 rsa = "0.9.6" 
 sha2 = {version =  "0.10.8",package = "sha2", features = ["oid"]}
+log = "0.4.25"
