--- a/example/sp1-zklogin-extension/Cargo.toml
+++ b/example/sp1-zklogin-extension/Cargo.toml
@@ -17,7 +17,12 @@ serde_json = "1.0.132"
 tracing = "0.1.40"
 base64 = "0.13"
 anyhow = "1.0"
+sha2-v0-10-8 = { version = "0.10.8", package = "sha2" }
+rsa = { version = "=0.9.6", features = ["serde", "sha2"] }
+blake2 = "0.10.6"
 
-[patch.crates-io]                                   # Check for the latest version
+[patch.crates-io]   
+
+sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }                         # Check for the latest version
 rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA/", tag = "patch-0.9.6-sp1-4.0.0" }
-sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0", features = ["oid"] }
+blake2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "blake2", tag = "blake2-v0.10.6" }                         # Check for the latest version
