--- a/example/sp1-zklogin-extension/program/Cargo.toml
+++ b/example/sp1-zklogin-extension/program/Cargo.toml
@@ -7,6 +7,6 @@ publish = false
 [dependencies]
 sp1-zkvm = { workspace = true }
 lib = { path = "../lib", package = "json-lib" }
-rsa = "0.9.6" 
-sha2 = {version =  "0.10.8",package = "sha2", features = ["oid"]}
 log = "0.4.25"
+sha2-v0-10-8 = { workspace = true }
+rsa = { workspace = true }
