--- a/verifier/Cargo.toml
+++ b/verifier/Cargo.toml
@@ -23,7 +23,7 @@ num-bigint = "0.4.6"
 num-traits = "0.2.19"
 sp1-verifier = "3.0.0"
 thiserror = "2.0.11"
-sp1-sdk = { workspace = false }
+sp1-sdk = { workspace = true }
 
 [dev-dependencies]
 hex-literal = "0.3.1"
